src/Frontend/Signe/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.3).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Frontend.Signe.Par
  ( happyError
  , myLexer
  , pProgram
  , pListToplevel
  , pToplevel
  , pListPattern
  , pExpr3
  , pExpr2
  , pExpr1
  , pExpr
  , pListExpr
  , pLet
  , pListLet
  , pSupOp
  , pComplex2
  , pComplex1
  , pComplex
  , pPattern
  , pPatternVar
  , pListPatternVar
  , pMono2
  , pMono1
  , pMono
  , pType
  , pListId
  ) where

import Prelude

import qualified Frontend.Signe.Abs
import Frontend.Signe.Lex

}

%name pProgram Program
%name pListToplevel ListToplevel
%name pToplevel Toplevel
%name pListPattern ListPattern
%name pExpr3 Expr3
%name pExpr2 Expr2
%name pExpr1 Expr1
%name pExpr Expr
%name pListExpr ListExpr
%name pLet Let
%name pListLet ListLet
%name pSupOp SupOp
%name pComplex2 Complex2
%name pComplex1 Complex1
%name pComplex Complex
%name pPattern Pattern
%name pPatternVar PatternVar
%name pListPatternVar ListPatternVar
%name pMono2 Mono2
%name pMono1 Mono1
%name pMono Mono
%name pType Type
%name pListId ListId
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '$'      { PT _ (TS _ 1)      }
  '('      { PT _ (TS _ 2)      }
  ')'      { PT _ (TS _ 3)      }
  '*'      { PT _ (TS _ 4)      }
  '+'      { PT _ (TS _ 5)      }
  ','      { PT _ (TS _ 6)      }
  '-'      { PT _ (TS _ 7)      }
  '->'     { PT _ (TS _ 8)      }
  '-i'     { PT _ (TS _ 9)      }
  '.'      { PT _ (TS _ 10)     }
  '/'      { PT _ (TS _ 11)     }
  ':'      { PT _ (TS _ 12)     }
  ':='     { PT _ (TS _ 13)     }
  ';'      { PT _ (TS _ 14)     }
  '='      { PT _ (TS _ 15)     }
  '@'      { PT _ (TS _ 16)     }
  '\\'     { PT _ (TS _ 17)     }
  '^'      { PT _ (TS _ 18)     }
  'e'      { PT _ (TS _ 19)     }
  'else'   { PT _ (TS _ 20)     }
  'forall' { PT _ (TS _ 21)     }
  'i'      { PT _ (TS _ 22)     }
  'if'     { PT _ (TS _ 23)     }
  'if*'    { PT _ (TS _ 24)     }
  'if°'    { PT _ (TS _ 25)     }
  'in'     { PT _ (TS _ 26)     }
  'let'    { PT _ (TS _ 27)     }
  'pi'     { PT _ (TS _ 28)     }
  'qubit'  { PT _ (TS _ 29)     }
  'then'   { PT _ (TS _ 30)     }
  'unit'   { PT _ (TS _ 31)     }
  '{'      { PT _ (TS _ 32)     }
  '}'      { PT _ (TS _ 33)     }
  '~+'     { PT _ (TS _ 34)     }
  '~-'     { PT _ (TS _ 35)     }
  '~0'     { PT _ (TS _ 36)     }
  '~1'     { PT _ (TS _ 37)     }
  '~i'     { PT _ (TS _ 38)     }
  '~j'     { PT _ (TS _ 39)     }
  'λ'      { PT _ (TS _ 40)     }
  'π'      { PT _ (TS _ 41)     }
  '∀'      { PT _ (TS _ 42)     }
  '∘'      { PT _ (TS _ 43)     }
  '⊤'      { PT _ (TS _ 44)     }
  L_Id     { PT _ (T_Id _)      }
  L_Scalar { PT _ (T_Scalar $$) }

%%

Id :: { Frontend.Signe.Abs.Id }
Id  : L_Id { Frontend.Signe.Abs.Id (mkPosToken $1) }

Scalar :: { Frontend.Signe.Abs.Scalar }
Scalar  : L_Scalar { Frontend.Signe.Abs.Scalar $1 }

Program :: { Frontend.Signe.Abs.Program }
Program : ListToplevel { Frontend.Signe.Abs.Progr $1 }

ListToplevel :: { [Frontend.Signe.Abs.Toplevel] }
ListToplevel
  : {- empty -} { [] } | Toplevel ';' ListToplevel { (:) $1 $3 }

Toplevel :: { Frontend.Signe.Abs.Toplevel }
Toplevel
  : Id ListPattern ':=' Expr { Frontend.Signe.Abs.ToplF $1 $2 $4 }
  | Id ListPattern ':' Type ':=' Expr { Frontend.Signe.Abs.ToplFT $1 $2 $4 $6 }

ListPattern :: { [Frontend.Signe.Abs.Pattern] }
ListPattern
  : {- empty -} { [] } | Pattern ListPattern { (:) $1 $2 }

Expr3 :: { Frontend.Signe.Abs.Expr }
Expr3
  : Id { Frontend.Signe.Abs.EVar $1 }
  | '~1' { Frontend.Signe.Abs.ETrue }
  | '~0' { Frontend.Signe.Abs.EFalse }
  | '~+' { Frontend.Signe.Abs.qplus }
  | '~-' { Frontend.Signe.Abs.qminus }
  | '~i' { Frontend.Signe.Abs.qimagi }
  | '~j' { Frontend.Signe.Abs.qimagj }
  | '(' ListExpr ')' { Frontend.Signe.Abs.ETup $2 }
  | '(' Expr ')' { $2 }

Expr2 :: { Frontend.Signe.Abs.Expr }
Expr2
  : Expr2 Expr3 { Frontend.Signe.Abs.EApp $1 $2 } | Expr3 { $1 }

Expr1 :: { Frontend.Signe.Abs.Expr }
Expr1
  : Complex '*' Expr2 SupOp Complex '*' Expr1 { Frontend.Signe.Abs.ESup $1 $3 $4 $5 $7 }
  | Expr2 SupOp Expr1 { Frontend.Signe.Abs.sunit $1 $2 $3 }
  | Complex '*' Expr2 { Frontend.Signe.Abs.EMul $1 $3 }
  | Expr2 '$' Expr1 { Frontend.Signe.Abs.edolr $1 $3 }
  | Expr2 '∘' Expr1 { Frontend.Signe.Abs.EComp $1 $3 }
  | Expr2 '@' Expr1 { Frontend.Signe.Abs.ecomps $1 $3 }
  | 'if°' Expr 'then' Expr 'else' Expr { Frontend.Signe.Abs.EIfq $2 $4 $6 }
  | 'if*' Expr 'then' Expr 'else' Expr { Frontend.Signe.Abs.eifqs $2 $4 $6 }
  | 'if' Expr 'then' Expr 'else' Expr { Frontend.Signe.Abs.EIf $2 $4 $6 }
  | 'let' '{' ListLet '}' 'in' Expr { Frontend.Signe.Abs.ELet $3 $6 }
  | 'λ' ListId '.' Expr { Frontend.Signe.Abs.EAbs $2 $4 }
  | '\\' ListId '.' Expr { Frontend.Signe.Abs.eabss $2 $4 }
  | Expr2 { $1 }

Expr :: { Frontend.Signe.Abs.Expr }
Expr : Expr1 { $1 }

ListExpr :: { [Frontend.Signe.Abs.Expr] }
ListExpr
  : {- empty -} { [] }
  | Expr { (:[]) $1 }
  | Expr ',' ListExpr { (:) $1 $3 }

Let :: { Frontend.Signe.Abs.Let }
Let : Pattern '=' Expr { Frontend.Signe.Abs.LLet $1 $3 }

ListLet :: { [Frontend.Signe.Abs.Let] }
ListLet : Let { (:[]) $1 } | Let ';' ListLet { (:) $1 $3 }

SupOp :: { Frontend.Signe.Abs.SupOp }
SupOp
  : '+' { Frontend.Signe.Abs.SOPlus }
  | '-' { Frontend.Signe.Abs.SOMin }

Complex2 :: { Frontend.Signe.Abs.Complex }
Complex2
  : Scalar '+' Scalar 'i' { Frontend.Signe.Abs.CComp $1 $3 }
  | Scalar '-' Scalar 'i' { Frontend.Signe.Abs.CComn $1 $3 }
  | Scalar { Frontend.Signe.Abs.creal $1 }
  | Scalar 'i' { Frontend.Signe.Abs.cimag $1 }
  | '-i' { Frontend.Signe.Abs.cnmag }
  | 'i' { Frontend.Signe.Abs.cjmag }
  | 'π' { Frontend.Signe.Abs.CPi }
  | 'pi' { Frontend.Signe.Abs.cpis }
  | 'e' { Frontend.Signe.Abs.CE }
  | '(' Complex ')' { $2 }

Complex1 :: { Frontend.Signe.Abs.Complex }
Complex1
  : Complex2 '^' Complex1 { Frontend.Signe.Abs.CExp $1 $3 }
  | Complex2 '/' Complex1 { Frontend.Signe.Abs.CDiv $1 $3 }
  | Complex2 Complex1 { Frontend.Signe.Abs.CMul $1 $2 }
  | Complex2 { $1 }

Complex :: { Frontend.Signe.Abs.Complex }
Complex : Complex1 { $1 }

Pattern :: { Frontend.Signe.Abs.Pattern }
Pattern
  : PatternVar { Frontend.Signe.Abs.Pattern $1 }
  | '(' ListPatternVar ')' { Frontend.Signe.Abs.Patterns $2 }

PatternVar :: { Frontend.Signe.Abs.PatternVar }
PatternVar : Id { Frontend.Signe.Abs.PVar $1 }

ListPatternVar :: { [Frontend.Signe.Abs.PatternVar] }
ListPatternVar
  : {- empty -} { [] }
  | PatternVar { (:[]) $1 }
  | PatternVar ',' ListPatternVar { (:) $1 $3 }

Mono2 :: { Frontend.Signe.Abs.Mono }
Mono2
  : Id { Frontend.Signe.Abs.MVar $1 }
  | 'qubit' { Frontend.Signe.Abs.MQubit }
  | '⊤' { Frontend.Signe.Abs.MUnit }
  | 'unit' { Frontend.Signe.Abs.munits }
  | '(' Mono ')' { $2 }

Mono1 :: { Frontend.Signe.Abs.Mono }
Mono1
  : Mono2 '*' Mono1 { Frontend.Signe.Abs.MTens $1 $3 }
  | Mono2 '->' Mono1 { Frontend.Signe.Abs.MArrow $1 $3 }
  | Mono2 { $1 }

Mono :: { Frontend.Signe.Abs.Mono }
Mono : Mono1 { $1 }

Type :: { Frontend.Signe.Abs.Type }
Type
  : Mono { Frontend.Signe.Abs.TMono $1 }
  | '∀' ListId '.' Mono { Frontend.Signe.Abs.TPoly $2 $4 }
  | 'forall' ListId '.' Mono { Frontend.Signe.Abs.tpolys $2 $4 }

ListId :: { [Frontend.Signe.Abs.Id] }
ListId : Id { (:[]) $1 } | Id ListId { (:) $1 $2 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
